# CONEstrip

./: README.md  requirements.txt  setup.cfg
.github/workflows/: run-tests-ubuntu.yml  run-tests-windows.yml
doc/: main.bib  main.tex
examples/: cddlib1.py  cone_experiment.py  conestrip_cdd.py  example1.py  example2.py  examples.py  generate.py  json  opt1  opt2  opt3  opt4  random_cone.py  run1  run2  run3  run4  run8  run_conestrip.py  run_conestrip_json.py  run_optimization.py  test_propositional_conestrip.py
experiments/: opt1  opt2  opt3  opt4  run_optimization_test_cases.py
release/: make_release
src/conestrip/: algorithms.py  cone.py  cones.py  conestrip.py  conestrip_cdd.py  conestrip_z3.py  extended_cones.py  gamble_algorithms.py  gambles.py  global_settings.py  make_test_cases.py  optimization.py  polyhedron.py  prevision.py  propositional_algorithms.py  propositional_cones.py  propositional_conestrip.py  propositional_sentence_parser.py  random_cones.py  random_extended_cones.py  sure_loss.py  utility.py
tests/: opt1  opt2  opt3  opt4  optimization_test_cases.py  runall  test_algorithms.py  test_cdd.py  test_cddlib.py  test_conestrip.py  test_conestrip_cdd.py  test_optimization.py  test_propositional_conestrip.py
