[metadata]
name = CONEstrip
version = 0.1
author = Wieger Wesselink
author_email = j.w.wesselink@tue.nl
description = An implementation of the CONEstrip algorithms using python and z3.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wiegerw/CONEstrip
project_urls =
    Bug Tracker = https://github.com/wiegerw/CONEstrip/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Boost Software License 1.0 (BSL-1.0)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

